<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="384dp"
        android:text="@string/welcome_intro"
        android:textFontWeight="@android:integer/config_longAnimTime"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_login"
        android:onClick="login_in"
        android:textSize="9pt"
        android:background="@drawable/btn_style"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/homeimg"
        android:layout_width="288dp"
        android:layout_height="291dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/a"
        android:src="@mipmap/apphome"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@id/textView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/floatin"
        android:layout_width="373dp"
        android:layout_height="359dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/welcome_float"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        android:src="@mipmap/floatin"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_app_name"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />
</androidx.constraintlayout.widget.ConstraintLayout>