<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/User"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/UserImg"
        android:layout_width="189dp"
        android:layout_height="188dp"
        android:contentDescription="@string/UserAvatar"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@android:color/darker_gray"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <Button
        android:id="@+id/RedEnv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="341dp"
        android:contentDescription="@string/RedEnv"
        android:text="發紅包"
        app:layout_constraintEnd_toEndOf="@id/UserImg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/UserImg"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BuyItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="421dp"
        android:contentDescription="@string/BuyItem"
        android:text="賣東西"
        app:layout_constraintEnd_toEndOf="@id/UserImg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/UserImg"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:contentDescription="@string/Note"
        android:text="@string/Note"
        app:layout_constraintEnd_toEndOf="@id/UserImg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/UserImg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_name"
        android:text="@string/user_name"
        android:textSize="10pt"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/UserImg"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/UserImg"
        app:layout_constraintTop_toBottomOf="@+id/UserImg"
        app:layout_constraintVertical_bias="0.038"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

